Update logic, script to run code on ubuntu